--- a/app/src/main/res/layout/registration.xml
+++ b/app/src/main/res/layout/registration.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content">
 
         <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/topAppBar_restaurantoverview"
+            android:id="@+id/registration_topAppBar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             app:title="Registrierung"
@@ -22,14 +22,15 @@
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/textField1"
+                android:id="@+id/registration_firstName"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -38,7 +39,7 @@
                 android:layout_marginEnd="16dp"
                 android:hint="@string/first_name"
                 app:helperText="Pflichtfeld"
-                app:layout_constraintBottom_toTopOf="@id/textField2"
+                app:layout_constraintBottom_toTopOf="@id/registration_lastName"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.103"
                 app:layout_constraintStart_toStartOf="parent"
@@ -52,7 +53,7 @@
 
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/textField2"
+                android:id="@+id/registration_lastName"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -61,11 +62,11 @@
                 android:layout_marginEnd="16dp"
                 android:hint="@string/last_name"
                 app:helperText="Pflichtfeld"
-                app:layout_constraintBottom_toTopOf="@+id/textField3"
+                app:layout_constraintBottom_toTopOf="@+id/registration_phoneNumber"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textField1">
+                app:layout_constraintTop_toBottomOf="@+id/registration_firstName">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
@@ -74,7 +75,7 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/textField3"
+                android:id="@+id/registration_phoneNumber"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -82,11 +83,11 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
                 android:hint="@string/phone_number"
-                app:layout_constraintBottom_toTopOf="@id/textField4"
+                app:layout_constraintBottom_toTopOf="@id/registration_email"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textField2"
+                app:layout_constraintTop_toBottomOf="@+id/registration_lastName"
                 app:layout_constraintVertical_bias="1.0">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -96,7 +97,7 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/textField4"
+                android:id="@+id/registration_email"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -105,10 +106,10 @@
                 android:layout_marginEnd="16dp"
                 android:hint="@string/e_mail"
                 app:helperText="Pflichtfeld"
-                app:layout_constraintBottom_toTopOf="@id/textField5"
+                app:layout_constraintBottom_toTopOf="@id/registration_password"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/textField3">
+                app:layout_constraintTop_toBottomOf="@id/registration_phoneNumber">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
@@ -118,7 +119,7 @@
 
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/textField5"
+                android:id="@+id/registration_password"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -130,10 +131,10 @@
                 app:counterEnabled="true"
                 app:counterMaxLength="10"
                 app:helperText="Pflichtfeld"
-                app:layout_constraintBottom_toTopOf="@id/menu"
+                app:layout_constraintBottom_toTopOf="@id/registration_paymentMenu"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/textField4">
+                app:layout_constraintTop_toBottomOf="@id/registration_email">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
@@ -142,7 +143,7 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/menu"
+                android:id="@+id/registration_paymentMenu"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -150,10 +151,10 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
                 android:hint="@string/choose_payment"
-                app:layout_constraintBottom_toTopOf="@id/button_register"
+                app:layout_constraintBottom_toTopOf="@id/register_r_btn"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/textField5">
+                app:layout_constraintTop_toBottomOf="@id/registration_password">
 
                 <AutoCompleteTextView
                     android:layout_width="match_parent"
@@ -164,7 +165,7 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <Button
-                android:id="@+id/button_register"
+                android:id="@+id/register_r_btn"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
@@ -172,12 +173,12 @@
                 android:layout_marginEnd="16dp"
                 android:text="@string/button_register"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/btn_login"
+                app:layout_constraintEnd_toStartOf="@+id/register_login_btn"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/menu" />
+                app:layout_constraintTop_toBottomOf="@id/registration_paymentMenu" />
 
             <Button
-                android:id="@+id/btn_login"
+                android:id="@+id/register_login_btn"
                 style="@style/Widget.MaterialComponents.Button.TextButton"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -187,10 +188,11 @@
                 android:text="@string/button_login"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/button_register"
-                app:layout_constraintTop_toBottomOf="@+id/menu" />
+                app:layout_constraintStart_toEndOf="@+id/register_r_btn"
+                app:layout_constraintTop_toBottomOf="@+id/registration_paymentMenu" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
     </androidx.core.widget.NestedScrollView>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
