--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -13,7 +13,7 @@
             android:id="@+id/topAppBar_restaurantoverview"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            app:title="Login"
+            app:title="Willkommen!"
             style="@style/Widget.MaterialComponents.Toolbar.Primary"
             app:layout_scrollFlags="scroll|enterAlways|snap"
             />
@@ -25,7 +25,7 @@
         android:layout_height="match_parent">
 
         <EditText
-            android:id="@+id/editTextTextEmailAddress1"
+            android:id="@+id/login_email_input"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
@@ -42,7 +42,7 @@
             app:layout_constraintVertical_bias="0.31" />
 
         <EditText
-            android:id="@+id/editTextTextPassword"
+            android:id="@+id/login_password_input"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
@@ -52,27 +52,27 @@
             android:importantForAutofill="no"
             android:inputType="textPassword"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress1"
+            app:layout_constraintEnd_toEndOf="@+id/login_email_input"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress1"
-            app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress1"
+            app:layout_constraintStart_toStartOf="@+id/login_email_input"
+            app:layout_constraintTop_toBottomOf="@+id/login_email_input"
             app:layout_constraintVertical_bias="0.066" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/login_btn"
             android:layout_width="126dp"
             android:layout_height="46dp"
             android:layout_marginTop="16dp"
             android:layout_marginBottom="16dp"
             android:text="@string/button_login"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword"
-            app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
-            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
+            app:layout_constraintEnd_toEndOf="@+id/login_password_input"
+            app:layout_constraintStart_toStartOf="@+id/login_password_input"
+            app:layout_constraintTop_toBottomOf="@+id/login_password_input"
             app:layout_constraintVertical_bias="0.058" />
 
         <Button
-            android:id="@+id/textButton"
+            android:id="@+id/login_register_btn"
             style="@style/Widget.MaterialComponents.Button.TextButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -83,7 +83,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button"
+            app:layout_constraintTop_toBottomOf="@+id/login_btn"
             app:layout_constraintVertical_bias="1.0" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
