--- a/app/src/main/res/layout/restaurant_overview.xml
+++ b/app/src/main/res/layout/restaurant_overview.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,14 +10,17 @@
         android:layout_height="wrap_content">
 
         <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/topAppBar_restaurantoverview"
+            android:id="@+id/restaurant_overview_topAppBar"
+            style="@style/Widget.MaterialComponents.Toolbar.Primary"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            app:title="@string/restaurants_appbar_title"
-            app:menu="@menu/restaurant_overview_top_app_bar"
-            style="@style/Widget.MaterialComponents.Toolbar.Primary"
             app:layout_scrollFlags="scroll|enterAlways|snap"
-            />
+            app:menu="@menu/restaurant_overview_top_app_bar"
+            app:title="@string/restaurants_appbar_title" />
+
+        <androidx.appcompat.widget.SearchView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
     </com.google.android.material.appbar.AppBarLayout>
 
@@ -36,17 +38,17 @@
             <HorizontalScrollView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                app:layout_constraintBottom_toTopOf="@id/r_overview_restaurant_card"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/r_overview_card4">
+                app:layout_constraintTop_toTopOf="parent">
 
                 <GridLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
 
                     <com.google.android.material.card.MaterialCardView
-                        android:id="@+id/r_overview_card1"
+                        android:id="@+id/r_overview_discount_card"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_margin="8dp"
@@ -59,25 +61,25 @@
                             android:layout_height="wrap_content"
                             android:orientation="vertical">
 
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="194dp"
-                            android:scaleType="centerCrop"
-                            app:srcCompat="@drawable/dice_2" />
+                            <ImageView
+                                android:id="@+id/product_pic"
+                                android:layout_width="wrap_content"
+                                android:layout_height="194dp"
+                                android:scaleType="centerCrop"
+                                app:srcCompat="@drawable/dice_2" />
 
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="@string/restaurant_name"
-                            android:textStyle="bold">
-                        </TextView>
+                            <TextView
+                                android:id="@+id/r_overview_restaurant"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="@string/restaurant_name"
+                                android:textStyle="bold"/>
 
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:text="Angebot"
-                                android:textStyle="bold">
-                            </TextView>
+                                android:textStyle="bold"/>
 
                         </LinearLayout>
 
@@ -108,15 +110,13 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:text="@string/restaurant_name"
-                                android:textStyle="bold">
-                            </TextView>
+                                android:textStyle="bold"></TextView>
 
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:text="Angebot"
-                                android:textStyle="bold">
-                            </TextView>
+                                android:textStyle="bold"></TextView>
 
                         </LinearLayout>
 
@@ -147,15 +147,13 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:text="@string/restaurant_name"
-                                android:textStyle="bold">
-                            </TextView>
+                                android:textStyle="bold"></TextView>
 
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:text="Angebot"
-                                android:textStyle="bold">
-                            </TextView>
+                                android:textStyle="bold"></TextView>
 
                         </LinearLayout>
 
@@ -167,17 +165,17 @@
             </HorizontalScrollView>
 
             <com.google.android.material.card.MaterialCardView
-                android:id="@+id/r_overview_card4"
+                android:id="@+id/r_overview_restaurant_card"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
                 android:layout_marginBottom="8dp"
+                android:clickable="true"
                 android:elevation="2dp"
+                android:focusable="true"
                 app:layout_constraintBottom_toTopOf="@id/r_overview_card5"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                android:clickable="true"
-                android:focusable="true">
+                app:layout_constraintStart_toStartOf="parent">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -196,9 +194,9 @@
                             <ImageView
                                 android:layout_width="match_parent"
                                 android:layout_height="194dp"
+                                android:contentDescription="TODO"
                                 android:scaleType="centerCrop"
-                                app:srcCompat="@drawable/dice_2"
-                                android:contentDescription="TODO" />
+                                app:srcCompat="@drawable/dice_2" />
                             <!-- android:contentDescription="@string/content_description_media" -->
 
 
@@ -248,7 +246,6 @@
                             android:textColor="?android:attr/textColorSecondary" />
 
 
-
                     </LinearLayout>
 
                     <!-- Buttons -->
@@ -263,21 +260,21 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="8dp"
-                            android:text="@string/filler_text"/>
+                            android:text="@string/filler_text" />
 
                         <com.google.android.material.button.MaterialButton
                             style="?attr/borderlessButtonStyle"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginEnd="32dp"
-                            android:text="@string/filler_text"/>
+                            android:text="@string/filler_text" />
 
                         <CheckBox
                             android:id="@+id/favorite_icon"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:button="@drawable/sl_favorite_black_24dp"
-                            app:buttonTint="@android:color/black"/>
+                            app:buttonTint="@android:color/black" />
 
                     </LinearLayout>
 
@@ -291,12 +288,12 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
                 android:layout_marginTop="16dp"
+                android:clickable="true"
                 android:elevation="2dp"
+                android:focusable="true"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/r_overview_card4"
-                android:clickable="true"
-                android:focusable="true">
+                app:layout_constraintTop_toBottomOf="@+id/r_overview_restaurant_card">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -335,6 +332,7 @@
                         </GridLayout>
 
                     </HorizontalScrollView>
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -391,8 +389,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:button="@drawable/sl_favorite_black_24dp"
-                            app:buttonTint="@android:color/black"
-                            />
+                            app:buttonTint="@android:color/black" />
                     </LinearLayout>
 
                 </LinearLayout>
@@ -405,12 +402,12 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
                 android:layout_marginTop="16dp"
+                android:clickable="true"
                 android:elevation="2dp"
+                android:focusable="true"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/r_overview_card5"
-                android:clickable="true"
-                android:focusable="true">
+                app:layout_constraintTop_toBottomOf="@+id/r_overview_card5">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -449,6 +446,7 @@
                         </GridLayout>
 
                     </HorizontalScrollView>
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -505,8 +503,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:button="@drawable/sl_favorite_black_24dp"
-                            app:buttonTint="@android:color/black"
-                            />
+                            app:buttonTint="@android:color/black" />
                     </LinearLayout>
 
                 </LinearLayout>
