--- a/app/src/main/res/layout/product_profile.xml
+++ b/app/src/main/res/layout/product_profile.xml
@@ -60,11 +60,13 @@
                             android:id="@+id/p_profile_name"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginTop="4dp"
                             android:padding="4dp"
                             android:text="@string/product_name"
                             android:textAllCaps="true"
                             android:textColor="@color/black"
-                            android:textStyle="bold" />
+                            android:textStyle="bold"
+                            android:textSize="20dp"/>
 
                         <TextView
                             android:id="@+id/p_profile_price"
@@ -72,7 +74,8 @@
                             android:layout_height="wrap_content"
                             android:padding="4dp"
                             android:text="@string/price"
-                            android:textColor="@color/black" />
+                            android:textColor="@color/black"
+                            android:textSize="20dp"/>
 
                         <LinearLayout
                             android:layout_marginTop="30dp"
@@ -93,7 +96,8 @@
                                 android:id="@+id/p_profile_product_quantity"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="@string/quantity_number" />
+                                android:text="@string/quantity_number"
+                                android:textSize="17dp"/>
 
                             <com.google.android.material.button.MaterialButton
                                 android:id="@+id/p_profile_btn_minus"
@@ -105,7 +109,7 @@
                         </LinearLayout>
 
                         <com.google.android.material.button.MaterialButton
-                            android:layout_marginTop="50dp"
+                            android:layout_marginTop="35dp"
                             android:id="@+id/p_profile_addToCart_btn"
                             android:padding="8dp"
                             android:layout_width="match_parent"
