--- a/app/src/main/res/layout/user_profile.xml
+++ b/app/src/main/res/layout/user_profile.xml
@@ -88,7 +88,7 @@
                             android:layout_gravity="center"
                             android:layout_marginStart="8dp"
                             android:layout_marginEnd="8dp"
-                            android:text="@string/filler_text" />
+                            android:text="Ändern" />
 
                     </LinearLayout>
 
