--- a/app/src/main/res/layout/registration.xml
+++ b/app/src/main/res/layout/registration.xml
@@ -29,6 +29,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/registration_firstName"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -47,6 +48,7 @@
                 app:layout_constraintVertical_bias="0.166">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/registration_firstName2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
             </com.google.android.material.textfield.TextInputLayout>
@@ -62,35 +64,14 @@
                 android:layout_marginEnd="16dp"
                 android:hint="@string/last_name"
                 app:helperText="Pflichtfeld"
-                app:layout_constraintBottom_toTopOf="@+id/registration_phoneNumber"
+                app:layout_constraintBottom_toTopOf="@id/registration_email"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/registration_firstName">
 
                 <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/registration_phoneNumber"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="16dp"
-                android:hint="@string/phone_number"
-                app:layout_constraintBottom_toTopOf="@id/registration_email"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/registration_lastName"
-                app:layout_constraintVertical_bias="1.0">
-
-                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/registration_lastName2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
 
@@ -109,14 +90,14 @@
                 app:layout_constraintBottom_toTopOf="@id/registration_password"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/registration_phoneNumber">
+                app:layout_constraintTop_toBottomOf="@+id/registration_lastName">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/registration_email2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
 
             </com.google.android.material.textfield.TextInputLayout>
-
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/registration_password"
@@ -131,38 +112,18 @@
                 app:counterEnabled="true"
                 app:counterMaxLength="10"
                 app:helperText="Pflichtfeld"
-                app:layout_constraintBottom_toTopOf="@id/registration_paymentMenu"
+                app:layout_constraintBottom_toTopOf="@id/register_r_btn"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/registration_email">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/registration_password2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/registration_paymentMenu"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="16dp"
-                android:hint="@string/choose_payment"
-                app:layout_constraintBottom_toTopOf="@id/register_r_btn"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/registration_password">
-
-                <AutoCompleteTextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/choose_payment"
-                    android:inputType="none" />
-
-            </com.google.android.material.textfield.TextInputLayout>
 
             <Button
                 android:id="@+id/register_r_btn"
@@ -175,7 +136,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/register_login_btn"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/registration_paymentMenu" />
+                app:layout_constraintTop_toBottomOf="@+id/registration_password" />
 
             <Button
                 android:id="@+id/register_login_btn"
@@ -189,7 +150,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/register_r_btn"
-                app:layout_constraintTop_toBottomOf="@+id/registration_paymentMenu" />
+                app:layout_constraintTop_toBottomOf="@+id/registration_password" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
