--- a/app/src/main/res/layout/restaurant_overview.xml
+++ b/app/src/main/res/layout/restaurant_overview.xml
@@ -253,6 +253,7 @@
                         android:orientation="horizontal">
 
                         <com.google.android.material.button.MaterialButton
+                            android:id="@+id/testBTN"
                             style="?attr/borderlessButtonStyle"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
