--- a/app/src/main/res/menu/user_profile_top_app_bar.xml
+++ b/app/src/main/res/menu/user_profile_top_app_bar.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/user_profile_settings"
-        android:icon="@drawable/ic_settings_white_24dp"
-        android:title="@string/settings"
+        android:id="@+id/back"
+        android:icon="@drawable/ic_logout_white_24dp_1_"
+        android:title="@string/logout"
         app:showAsAction="always" />
 
 
